# Access-to-IT

./: .clang-format  .clang-tidy  Pieces.md  README.md  r1
C-Language/: README.md
C-Language/1_Chapter/: 01.c  02.c  11.c  12.c  13.c  23.c
C-Language/3_Chapter/: 03.c  04.c  05.c  06.c
C-Language/4_Chapter/: 01.c  02.c  03.c
CppStudio/: README.md
CppStudio/Beginner/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07  07.cpp  08.cpp  09.cpp  09.out   10  10.cpp
CppStudio/Easy/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  30.cpp  31.cpp  32.cpp
cmakeTest/application/: CMakeLists.txt
cmakeTest/lib/: CMakeLists.txt
cmakeTest/lib/include/: utility.hpp
cmakeTest/lib/source/: utility.cpp
codeforces/: 4A.cpp  71A.cpp
leetcode/: 1.c  README.md  graph.cpp  tree.cpp
leetcode/1/: 1.cpp
leetcode/1020/: 1020.cpp
leetcode/118.Pascal'sTriangle/: 118.cpp
leetcode/121/: 1.cpp
leetcode/125.ValidPalindrome/: 125.cpp
leetcode/1254/: 1254.cpp
leetcode/133/: 133.cpp
leetcode/1372.LongestZigZagPathinaBinaryTree/: 1372.cpp
leetcode/14/: 14.cpp
leetcode/1431.KidsWiththeGreatestNumberofCandies/: 1431.cpp
leetcode/15_unsolved/: 1.cpp
leetcode/1675_unsolved/: 1.cpp
leetcode/1768.MergeStringsAlternately/: 1768.cpp
leetcode/1962/: main.cpp
leetcode/2/: 2.c  2.cpp
leetcode/20/: 20.cpp
leetcode/20.ValidParentheses/: 20.cpp
leetcode/2300/: 2300.cpp  exp.json  output.json  potions.json  spells.json
leetcode/2348/: 2348.cpp
leetcode/2390.RemovingStarsFromaString/: 2390.cpp
leetcode/2405/: 2405.cpp
leetcode/2439/: 2439.cpp
leetcode/28/: 28.cpp
leetcode/3/: 3.cpp
leetcode/35/: 1.cpp
leetcode/516.LongestPalindromicSubsequence/: 516.cpp
leetcode/55/: main.cpp
leetcode/58/: 58.cpp
leetcode/605/: 605.cpp
leetcode/662.MaximumWidthofBinaryTree/: 662.cpp
leetcode/67/: 67.cpp
leetcode/7.ReverseInteger/: 7.cpp
leetcode/70.ClimbingStairs/: 70.cpp
leetcode/704/: 704.cpp
leetcode/71.SimplifyPath/: 71.cpp
leetcode/83/: 83.cpp
leetcode/88/: 88.cpp
leetcode/881/: 881.cpp
leetcode/9/: 9.cpp
leetcode/946.ValidateStackSequences/: 946.cpp
leetcode/header/: struct.hpp
stepik_folder/: 1.cpp  1.json  arrayTest.cpp
stepik_folder/ds/tree/: Makefile  tree.cpp
stepik_folder/lc/1675_unsolved/: 1.cpp
sudoku/: main.cpp  s1.in  s1.t_out  s2.t_out
tmp/Bjarne Stroustrup/: std_lib_facilities.h
tmp/cmakeTest/application/: app.cpp
tmp/cmakeTest/lib/include/: check.hpp  round.hpp  utility.hpp
tmp/cmakeTest/lib/source/: check.cpp  round.cpp  utility.cpp
tmp/stepik_folder/: 2.cpp
